[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Sieppaa.PNG" type="Texture" id=1]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menu/blue_button00.png" type="Texture" id=3]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 417.0
margin_top = 222.0
margin_right = 607.0
margin_bottom = 377.0

[node name="Start_button" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Start_button"]
margin_left = 63.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_button" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 190.0
margin_bottom = 102.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Music_button"]
margin_left = 63.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_button" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 190.0
margin_bottom = 155.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Quit_button"]
margin_left = 63.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Music_button" to="." method="_on_Music_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit_button" to="." method="_on_Quit_button_pressed"]
